fix problem with hero img on mobile devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,7 +133,6 @@ body {
 	height: 100vh;
 	background-image: url('../img/hero-big.jpg');
 	background-size: cover;
-	background-attachment: fixed;
 	background-position: bottom;
 	z-index: 1;
 
@@ -249,12 +248,12 @@ body {
 			border-top-right-radius: 12px;
 			transform: translateX(-50%);
 			text-align: center;
-			background-color: rgba(0,0,0,0.7);
+			background-color: rgba(0, 0, 0, 0.7);
 			transition: opacity 0.3s;
-			
+
 			p {
 				margin: 0 auto;
-				font-size: clamp(1.2rem,3vw,1.6rem);
+				font-size: clamp(1.2rem, 3vw, 1.6rem);
 			}
 		}
 
@@ -349,12 +348,13 @@ body {
 			display: flex;
 			flex-direction: column;
 			gap: 3em;
-			padding: 2em;
+			padding: 1.5em;
 			border-top-left-radius: 12px;
 			border-top-right-radius: 12px;
 			background-color: $main-color;
 
 			.brand-icon {
+				position: relative;
 				padding: 0.5em;
 				font-size: clamp(2rem, 3vw, 2.8rem);
 				color: $pure-white;
@@ -362,6 +362,26 @@ body {
 
 				&:hover {
 					color: $black-color;
+				}
+			}
+
+			a {
+				position: relative;
+
+				&::after {
+					content: '';
+					position: absolute;
+					left: 50%;
+					transform: translateX(-50%);
+					bottom: -100%;
+					height: 100%;
+					width: 2px;
+					background-color: $pure-white;
+					pointer-events: none;
+				}
+				
+				&:last-child::after {
+					display: none;
 				}
 			}
 		}
